v4.12
- new uberasm objects system; cleaned up level asm
- return of the grey double bounce shell (but no more messed up koopas)
- more extra-bit sprite enhancements; chucks remember behaviour, exit-enabled grow pipe, squished rex
- tweaked some global exanimations
- dropped the ram controlled fireballs feature
- moved global line guide map16 tiles
- updated retry to 0.4.3
- updated Lunar Helper to 3.0.0

v4.11
- new death block graphics, using the SMM2 spikes
- removed mega mole tweak
- tidier backup process and updates to backup script
- cleaner, less idiosyncratic baserom layout (return of normal list files)
- updated Lunar Helper to 2.4.0, Lunar Magic to 3.33 and Lunar Monitor to 1.4.0
- updated retry to 0.3.10
- dropped Human Readable Map16 from tools
- documentation updates

v4.10
- new on/off blocks and block graphics
- added TheBourgyMan's swooper and spiny blocks
- updated the pirahna plant patch & added demo level for it
- updated documentation
- added Optimize 1F0 patch
- update retry to 0.3.7

v4.9
- tool updates: UberASMTool 1.5, LunarHelper 2.1.1, Lunar Monitor 1.2.3
- reorganization of patches
- updates to build scripts
- updates retry to 0.3.5

v4.8.1
- fixed some SA-1 specific issues
- included big/vertical level patch fix for triple platforms
- include fix for SSP death softlock

v4.8
- added (optional) SA-1 support
- adjusted included resources to be fully compatible with SA-1

v4.7
- massive rework to a Lunar Helper + Lunar Monitor workflow
- a few block updates
- some fixes to Extended NMST patch for castle frames
- replace cape framerule hex edit with uberasm version
- removal of a couple needless tweaks

v4.6
- reworked the global block graphics to use Vanilla layouts and ExGraphics
- reworked page 2 of map16 to allow for using the Lunar Magic layer 3 tide act as feature
- returned the big bush and big pipe as optional ExGraphics
- custom blocks now use ExGraphics instead of overriding GFX17