@@ -3,6 +3,7 @@ v4.12
 - return of the grey double bounce shell (but no more messed up koopas)
 - more extra-bit sprite enhancements; chucks remember behaviour, exit-enabled grow pipe, squished rex
 - tweaked some global exanimations
+- added spike top ceiling cling patch
 - dropped the ram controlled fireballs feature
 - moved global line guide map16 tiles
 - updated retry to 0.4.3
